# name: ClickhouseTestUnorderedFunnelGroups.test_unordered_funnel_with_groups
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_funnel_?$ (ClickhouseInsightsViewSet) */
  SELECT countIf(steps = 1) step_1,
         countIf(steps = 2) step_2,
         avg(step_1_average_conversion_time_inner) step_1_average_conversion_time,
         median(step_1_median_conversion_time_inner) step_1_median_conversion_time
  FROM
    (SELECT aggregation_target,
            steps,
            avg(step_1_conversion_time) step_1_average_conversion_time_inner,
            median(step_1_conversion_time) step_1_median_conversion_time_inner
     FROM
       (SELECT aggregation_target,
               steps,
               max(steps) over (PARTITION BY aggregation_target) as max_steps,
                               step_1_conversion_time
        FROM
          (SELECT *,
                  arraySort([latest_0,latest_1]) as event_times,
                  arraySum([if(latest_0 < latest_1 AND latest_1 <= latest_0 + INTERVAL 14 DAY, 1, 0), 1]) AS steps ,
                  arraySort([latest_0,latest_1]) as conversion_times,
                  if(isNotNull(conversion_times[2])
                     AND conversion_times[2] <= conversion_times[1] + INTERVAL 14 DAY, dateDiff('second', conversion_times[1], conversion_times[2]), NULL) step_1_conversion_time
           FROM
             (SELECT aggregation_target,
                     timestamp,
                     step_0,
                     latest_0,
                     step_1,
                     min(latest_1) over (PARTITION by aggregation_target
                                         ORDER BY timestamp DESC ROWS BETWEEN UNBOUNDED PRECEDING AND 0 PRECEDING) latest_1
              FROM
                (SELECT aggregation_target,
                        timestamp,
                        if(event = 'user signed up', 1, 0) as step_0,
                        if(step_0 = 1, timestamp, null) as latest_0,
                        if(event = 'paid', 1, 0) as step_1,
                        if(step_1 = 1, timestamp, null) as latest_1
                 FROM
                   (SELECT e.event as event,
                           e.team_id as team_id,
                           e.distinct_id as distinct_id,
                           e.timestamp as timestamp,
                           e."$group_0" as aggregation_target,
                           e."$group_0" as "$group_0"
                    FROM events e
                    WHERE team_id = 2
                      AND event IN ['paid', 'user signed up']
                      AND timestamp >= toDateTime('2020-01-01 00:00:00', 'UTC')
                      AND timestamp <= toDateTime('2020-01-14 23:59:59', 'UTC')
                      AND (NOT has([''], "$group_0")) ) events
                 WHERE (step_0 = 1
                        OR step_1 = 1) ))
           WHERE step_0 = 1
           UNION ALL SELECT *,
                            arraySort([latest_0,latest_1]) as event_times,
                            arraySum([if(latest_0 < latest_1 AND latest_1 <= latest_0 + INTERVAL 14 DAY, 1, 0), 1]) AS steps ,
                            arraySort([latest_0,latest_1]) as conversion_times,
                            if(isNotNull(conversion_times[2])
                               AND conversion_times[2] <= conversion_times[1] + INTERVAL 14 DAY, dateDiff('second', conversion_times[1], conversion_times[2]), NULL) step_1_conversion_time
           FROM
             (SELECT aggregation_target,
                     timestamp,
                     step_0,
                     latest_0,
                     step_1,
                     min(latest_1) over (PARTITION by aggregation_target
                                         ORDER BY timestamp DESC ROWS BETWEEN UNBOUNDED PRECEDING AND 0 PRECEDING) latest_1
              FROM
                (SELECT aggregation_target,
                        timestamp,
                        if(event = 'paid', 1, 0) as step_0,
                        if(step_0 = 1, timestamp, null) as latest_0,
                        if(event = 'user signed up', 1, 0) as step_1,
                        if(step_1 = 1, timestamp, null) as latest_1
                 FROM
                   (SELECT e.event as event,
                           e.team_id as team_id,
                           e.distinct_id as distinct_id,
                           e.timestamp as timestamp,
                           e."$group_0" as aggregation_target,
                           e."$group_0" as "$group_0"
                    FROM events e
                    WHERE team_id = 2
                      AND event IN ['paid', 'user signed up']
                      AND timestamp >= toDateTime('2020-01-01 00:00:00', 'UTC')
                      AND timestamp <= toDateTime('2020-01-14 23:59:59', 'UTC')
                      AND (NOT has([''], "$group_0")) ) events
                 WHERE (step_0 = 1
                        OR step_1 = 1) ))
           WHERE step_0 = 1 ))
     GROUP BY aggregation_target,
              steps
     HAVING steps = max_steps) SETTINGS allow_experimental_window_functions = 1
  '
---
# name: ClickhouseTestUnorderedFunnelGroups.test_unordered_funnel_with_groups.1
  '
  /* request:api_person_funnel_?$ (LegacyPersonViewSet) */
  SELECT aggregation_target AS actor_id
  FROM
    (SELECT aggregation_target,
            steps,
            avg(step_1_conversion_time) step_1_average_conversion_time_inner,
            median(step_1_conversion_time) step_1_median_conversion_time_inner
     FROM
       (SELECT aggregation_target,
               steps,
               max(steps) over (PARTITION BY aggregation_target) as max_steps,
                               step_1_conversion_time
        FROM
          (SELECT *,
                  arraySort([latest_0,latest_1]) as event_times,
                  arraySum([if(latest_0 < latest_1 AND latest_1 <= latest_0 + INTERVAL 14 DAY, 1, 0), 1]) AS steps ,
                  arraySort([latest_0,latest_1]) as conversion_times,
                  if(isNotNull(conversion_times[2])
                     AND conversion_times[2] <= conversion_times[1] + INTERVAL 14 DAY, dateDiff('second', conversion_times[1], conversion_times[2]), NULL) step_1_conversion_time
           FROM
             (SELECT aggregation_target,
                     timestamp,
                     step_0,
                     latest_0,
                     step_1,
                     min(latest_1) over (PARTITION by aggregation_target
                                         ORDER BY timestamp DESC ROWS BETWEEN UNBOUNDED PRECEDING AND 0 PRECEDING) latest_1
              FROM
                (SELECT aggregation_target,
                        timestamp,
                        if(event = 'user signed up', 1, 0) as step_0,
                        if(step_0 = 1, timestamp, null) as latest_0,
                        if(event = 'paid', 1, 0) as step_1,
                        if(step_1 = 1, timestamp, null) as latest_1
                 FROM
                   (SELECT e.event as event,
                           e.team_id as team_id,
                           e.distinct_id as distinct_id,
                           e.timestamp as timestamp,
                           e."$group_0" as aggregation_target,
                           e."$group_0" as "$group_0"
                    FROM events e
                    WHERE team_id = 2
                      AND event IN ['paid', 'user signed up']
                      AND timestamp >= toDateTime('2020-01-01 00:00:00', 'UTC')
                      AND timestamp <= toDateTime('2020-01-14 23:59:59', 'UTC')
                      AND ((NOT has([''], "$group_0"))
                           AND (NOT has([''], "$group_0"))) ) events
                 WHERE (step_0 = 1
                        OR step_1 = 1) ))
           WHERE step_0 = 1
           UNION ALL SELECT *,
                            arraySort([latest_0,latest_1]) as event_times,
                            arraySum([if(latest_0 < latest_1 AND latest_1 <= latest_0 + INTERVAL 14 DAY, 1, 0), 1]) AS steps ,
                            arraySort([latest_0,latest_1]) as conversion_times,
                            if(isNotNull(conversion_times[2])
                               AND conversion_times[2] <= conversion_times[1] + INTERVAL 14 DAY, dateDiff('second', conversion_times[1], conversion_times[2]), NULL) step_1_conversion_time
           FROM
             (SELECT aggregation_target,
                     timestamp,
                     step_0,
                     latest_0,
                     step_1,
                     min(latest_1) over (PARTITION by aggregation_target
                                         ORDER BY timestamp DESC ROWS BETWEEN UNBOUNDED PRECEDING AND 0 PRECEDING) latest_1
              FROM
                (SELECT aggregation_target,
                        timestamp,
                        if(event = 'paid', 1, 0) as step_0,
                        if(step_0 = 1, timestamp, null) as latest_0,
                        if(event = 'user signed up', 1, 0) as step_1,
                        if(step_1 = 1, timestamp, null) as latest_1
                 FROM
                   (SELECT e.event as event,
                           e.team_id as team_id,
                           e.distinct_id as distinct_id,
                           e.timestamp as timestamp,
                           e."$group_0" as aggregation_target,
                           e."$group_0" as "$group_0"
                    FROM events e
                    WHERE team_id = 2
                      AND event IN ['paid', 'user signed up']
                      AND timestamp >= toDateTime('2020-01-01 00:00:00', 'UTC')
                      AND timestamp <= toDateTime('2020-01-14 23:59:59', 'UTC')
                      AND ((NOT has([''], "$group_0"))
                           AND (NOT has([''], "$group_0"))) ) events
                 WHERE (step_0 = 1
                        OR step_1 = 1) ))
           WHERE step_0 = 1 ))
     GROUP BY aggregation_target,
              steps
     HAVING steps = max_steps)
  WHERE steps IN [1, 2]
  ORDER BY aggregation_target
  LIMIT 100
  OFFSET 0 SETTINGS allow_experimental_window_functions = 1
  '
---
